--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "express": "^4.21.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0"
+  },
+  "scripts": {
+    "dev": "node index"
   }
 }
