--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv-verifier": "^1.0.1",
     "express": "^4.21.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0"
