--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "dotenv-verifier": "^1.0.1",
     "express": "^4.21.1",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0"
   },
   "scripts": {
+    "start": "node index",
     "dev": "node index"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
