--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dotenv-verifier": "^1.0.1",
     "express": "^4.21.1",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.8.0"
+    "mongoose": "8.13.1"
   },
   "scripts": {
     "start": "node index",
